# NEDSS-DataIngestion

./: .env.sample  .git-blame-ignore-revs  .gitignore  CODEOWNERS.md  HELP.md  PERFORMANCE_TESTING_GUIDE.md  README.md  build.gradle  dataingestion.env.sample  docker-compose.shared.yml  docker-compose.yml  pom.xml  ra_20jan2023.txt  settings.gradle
.github/: dependabot.yml  pull_request_template.md
cdaschema/: build.gradle  settings.gradle
containers/: build_classic.sh
coverage-report/: build.gradle
data-ingestion-service/: .gitignore  Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
data-processing-service/: .gitignore  Dockerfile  Readme.md  build.gradle  settings.gradle
deduplication/: .gitignore  Dockerfile  build.gradle
docs/: DataIngestion.postman_collection.json  Data_Ingestion_API_Postman_Collection.json  DevSetup.md  README.md  TestContainer.md  elr_upload_bulk.sh
gradle/: cucumber-logging.gradle
hl7-generation-service/: hl7Generate.py
hl7-helper/: .gitignore  settings.gradle
hl7-parser/: build.gradle  settings.gradle
jwtgenerator/: .gitignore  Dockerfile  README.md  build.gradle  compose-me.yml  config-me.yml  deploy-me.yml  pom.xml  service-me.yml
k8s/: README.md
karatetest/: build.gradle
nbsadapter/: pom.xml  (+5 more)
testing-tools/e2e-elr-ingest/: .env.example  .gitignore  README.md  main.py  pyproject.toml
testing-tools/e2e-elr-ingest/nbs7_e2e/: __init__.py  auth.py  cli.py  config.py  db_status.py  generate_hl7.py  hl7_files.py  ingest_client.py  jwt_utils.py
testing-tools/e2e-elr-ingest/sample_hl7/: 00001.hl7
(+3778 files in other folders)
